Fix Spacing bug

--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -15,13 +15,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: $background-colour;
-  min-height: 100%;
+  height: 100%;
+  width: 100%;
 
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 #root {
-  min-height: 100%;
+  height: 100%;
 }
 
 code {
@@ -52,33 +54,22 @@ p {
 
 .app-container {
   position: fixed;
-  // height: 100%;
-  // width: 100%;
-  z-index: 0;
+  height: 100%;
+  width: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
-
-  margin: 0;
-  padding: 0;
 
   .section-container {
     margin-top: $section-container-vertical-spacing;
     margin-bottom: $section-container-vertical-spacing;
 
     max-width: 80%;
-  }
-
-  .section-spacing {
-    height: 1000px;
+    min-height: fit-content;
   }
 }
 
